k8s-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jslay-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jslay-net
  template:
    metadata:
      labels:
        app: jslay-net
        version: $GIT_COMMIT
    spec:
      containers:
        - name: jslay-net
          image: nginx:stable-alpine
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: site
      volumes:
        - name: site
          emptyDir: {}
