k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPO_NAME
spec:
  selector:
    app: REPO_NAME
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
