k8s-deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jslay-net
  annotation:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt"
    certmanager.k8s.io/acme-challenge-type: "http01"
spec:
  tls:
  - hosts:
    - jslay.net
    secretName: jslay-net-tls
  rules:
  - host: jslay.net
    http:
      paths:
      - path: /
        backend:
         serviceName: jslay-net
         servicePort: 80
